--- a/index.html
+++ b/index.html
@@ -132,16 +132,13 @@
         <div class="center_prod_box">
           <div class="product_title"><a href="#">Makita 156 MX-VL</a></div>
           <div class="product_img"><a href="#"><img src="images/p7.jpg" alt="" border="0" /></a></div>
-          <div class="prod_price"><span class="reduce">350$</span> <span class="price">270$</span></div>
-        </div>
-        <div class="prod_details_tab"> <a href="#" class="prod_buy">Add to Cart</a> <a href="#" class="prod_details">Details</a> </div>
-      </div>
+          <div class="prod_price"><span class="reduce">350$</span> <span class="price">270$</span></div></div>
+        <div class="prod_details_tab"> <a href="#" class="prod_buy">Add to Cart</a> <a href="#" class="prod_details">Details</a> </div></div>
       <div class="prod_box">
         <div class="center_prod_box">
           <div class="product_title"><a href="#">Bosch XC</a></div>
           <div class="product_img"><a href="#"><img src="images/p1.jpg" alt="" border="0" /></a></div>
-          <div class="prod_price"><span class="reduce">350$</span> <span class="price">270$</span></div>
-        </div>
+          <div class="prod_price"><span class="reduce">350$</span> <span class="price">270$</span></div></div>
         <div class="prod_details_tab"> <a href="#" class="prod_buy">Add to Cart</a> <a href="#" class="prod_details">Details</a> </div>
       </div>
       <div class="prod_box">
@@ -165,7 +162,7 @@
           <span class="border_cart"></span> Total: <span class="price">350$</span> </div>
         <div class="cart_icon"><a href="#"><img src="images/shoppingcart.png" alt="" width="35" height="35" border="0" /></a></div>
       </div>
-      <div class="title_box">What’s new</div>
+      <div class="title_box">WhatÂ’s new</div>
       <div class="border_box">
         <div class="product_title"><a href="#">Motorola 156 MX-VL</a></div>
         <div class="product_img"><a href="#"><img src="images/p2.jpg" alt="" border="0" /></a></div>
